Feat: css-vars.scss & utilities.scss

--- a/dev/src/styles/index.scss
+++ b/dev/src/styles/index.scss
@@ -1,209 +1,4 @@
-@use './mediaquery.scss' as mediaquery;
-@use './mixins.scss' as mixins;
-@use './variables.scss' as variables;
-
-:root {
-  @each $name, $value in variables.$define-colors {
-    --color-#{$name}: #{$value};
-  }
-
-  @each $name, $value in variables.$define-font-sizes {
-    --font-size-#{$name}: #{$value};
-  }
-
-  @each $name, $value in variables.$define-font-weights {
-    --font-weight-#{$name}: #{$value};
-  }
-
-  @each $name, $value in variables.$define-line-heights {
-    --line-height-#{$name}: #{$value};
-  }
-
-  @each $name, $value in variables.$define-spaces {
-    --space-#{$name}: #{$value};
-  }
-}
-
-// color & background-color
-@include mixins.generate-classes(variables.$colors, 'text', 'color');
-@include mixins.generate-classes(variables.$colors, 'bg', 'background-color');
-
-// font-size
-@include mixins.generate-classes(variables.$font-sizes, 'fs', 'font-size');
-
-// font-weight
-@include mixins.generate-classes(variables.$font-weights, 'fw', 'font-weight');
-
-// text-align
-@include mixins.generate-classes(
-  variables.$text-directions,
-  'text',
-  'text-align'
-);
-
-// line-height
-@include mixins.generate-classes(variables.$line-heights, 'lh', 'line-height');
-
-// visibility
-@include mixins.generate-classes(variables.$visibilities, 'v', 'visibility');
-
-// display
-@include mixins.generate-classes(variables.$displays, 'd', 'display');
-
-// position
-@include mixins.generate-classes(variables.$positions, 'ps', 'position');
-
-// margin & padding
-@include mixins.generate-space-classes('m', 'margin');
-@include mixins.generate-space-classes('p', 'padding');
-
-// gap
-@include mixins.generate-classes(variables.$spaces, 'g', 'gap');
-@include mixins.generate-classes(variables.$spaces, 'rg', 'row-gap');
-@include mixins.generate-classes(variables.$spaces, 'cg', 'column-gap');
-
-// size
-@include mixins.generate-classes(variables.$sizes, 'w', 'width');
-@include mixins.generate-classes(variables.$sizes, 'h', 'height');
-
-// white-space
-@include mixins.generate-classes(variables.$white-spaces, 'ws', 'white-space');
-
-// word-break
-@include mixins.generate-classes(variables.$word-breaks, 'wb', 'word-break');
-
-// flex-direction
-@include mixins.generate-classes(
-  variables.$flex-directions,
-  'flex-direction',
-  'flex-direction'
-);
-
-// flex-wrap
-@include mixins.generate-classes(
-  variables.$flex-wraps,
-  'flex-wrap',
-  'flex-wrap'
-);
-
-// justify-content
-@include mixins.generate-classes(
-  variables.$justify-content-positions,
-  'justify-content',
-  'justify-content'
-);
-
-// align-items
-@include mixins.generate-classes(
-  variables.$align-items-positions,
-  'align-items',
-  'align-items'
-);
-
-// util
-.flex-1 {
-  flex: 1 !important;
-}
-
-.flex-shrink-0 {
-  flex-shrink: 0 !important;
-}
-
-// breakpoints styles
-@include mixins.generate-breakpoint-classes(variables.$colors, 'text', 'color');
-@include mixins.generate-breakpoint-classes(
-  variables.$colors,
-  'bg',
-  'background-color'
-);
-@include mixins.generate-breakpoint-classes(
-  variables.$font-sizes,
-  'fs',
-  'font-size'
-);
-@include mixins.generate-breakpoint-classes(
-  variables.$font-weights,
-  'fw',
-  'font-weight'
-);
-@include mixins.generate-breakpoint-classes(
-  variables.$text-directions,
-  'text',
-  'text-align'
-);
-@include mixins.generate-breakpoint-classes(
-  variables.$line-heights,
-  'lh',
-  'line-height'
-);
-@include mixins.generate-breakpoint-classes(
-  variables.$visibilities,
-  'v',
-  'visibility'
-);
-@include mixins.generate-breakpoint-classes(
-  variables.$displays,
-  'd',
-  'display'
-);
-@include mixins.generate-breakpoint-classes(
-  variables.$positions,
-  'ps',
-  'position'
-);
-@include mixins.generate-breakpoint-space-classes('m', 'margin');
-@include mixins.generate-breakpoint-space-classes('p', 'padding');
-@include mixins.generate-breakpoint-classes(variables.$spaces, 'g', 'gap');
-@include mixins.generate-breakpoint-classes(variables.$spaces, 'rg', 'row-gap');
-@include mixins.generate-breakpoint-classes(
-  variables.$spaces,
-  'cg',
-  'column-gap'
-);
-@include mixins.generate-breakpoint-classes(variables.$sizes, 'w', 'width');
-@include mixins.generate-breakpoint-classes(variables.$sizes, 'h', 'height');
-@include mixins.generate-breakpoint-classes(
-  variables.$white-spaces,
-  'ws',
-  'white-space'
-);
-@include mixins.generate-breakpoint-classes(
-  variables.$word-breaks,
-  'wb',
-  'word-break'
-);
-@include mixins.generate-breakpoint-classes(
-  variables.$flex-directions,
-  'flex-direction',
-  'flex-direction'
-);
-@include mixins.generate-breakpoint-classes(
-  variables.$flex-wraps,
-  'flex-wrap',
-  'flex-wrap'
-);
-@include mixins.generate-breakpoint-classes(
-  variables.$justify-content-positions,
-  'justify-content',
-  'justify-content'
-);
-@include mixins.generate-breakpoint-classes(
-  variables.$align-items-positions,
-  'align-items',
-  'align-items'
-);
-
-// util for breakpoints
-@each $breakpoint, $_ in mediaquery.$breakpoints {
-  .#{$breakpoint}\:flex-1 {
-    @include mediaquery.mq($breakpoint) {
-      flex: 1 !important;
-    }
-  }
-
-  .#{$breakpoint}\:flex-shrink-0 {
-    @include mediaquery.mq($breakpoint) {
-      flex-shrink: 0 !important;
-    }
-  }
-}
+@forward './css-vars.scss';
+@forward './mediaquery.scss';
+@forward './utilities.scss';
+@forward './variables.scss';
