Refac: remove .scss

--- a/dev/src/styles/index.scss
+++ b/dev/src/styles/index.scss
@@ -1,4 +1,4 @@
-@forward './css-vars.scss';
-@forward './mediaquery.scss';
-@forward './utilities.scss';
-@forward './variables.scss';
+@forward './css-vars';
+@forward './mediaquery';
+@forward './utilities';
+@forward './variables';
