--- a/dev/src/styles/mixins.scss
+++ b/dev/src/styles/mixins.scss
@@ -1,5 +1,5 @@
-@use './mediaquery.scss' as mediaquery;
-@use './variables.scss' as variables;
+@use './mediaquery' as mediaquery;
+@use './variables' as variables;
 
 @mixin generate-classes($map, $prefix, $property) {
   @each $key, $value in $map {
