--- a/dev/src/styles/utilities.scss
+++ b/dev/src/styles/utilities.scss
@@ -102,11 +102,11 @@ $utility-configs: (
 
 // Fixed utilities
 .flex-1 {
-  flex: 1 !important;
+  flex: 1;
 }
 
 .flex-shrink-0 {
-  flex-shrink: 0 !important;
+  flex-shrink: 0;
 }
 
 // Generate breakpoint utilities
@@ -126,13 +126,13 @@ $utility-configs: (
 @each $breakpoint, $_ in mediaquery.$breakpoints {
   .#{$breakpoint}\:flex-1 {
     @include mediaquery.mq($breakpoint) {
-      flex: 1 !important;
+      flex: 1;
     }
   }
 
   .#{$breakpoint}\:flex-shrink-0 {
     @include mediaquery.mq($breakpoint) {
-      flex-shrink: 0 !important;
+      flex-shrink: 0;
     }
   }
 }
