--- a/packages/grabcss/src/variables.scss
+++ b/packages/grabcss/src/variables.scss
@@ -304,3 +304,11 @@ $place-self: (
   'center': center,
   'stretch': stretch
 ) !default;
+
+$opacities: (
+  0: 0,
+  25: 0.25,
+  50: 0.5,
+  75: 0.75,
+  100: 1
+);
