Added Opacities in the Playground Section

--- a/packages/grabcss/src/utilities.scss
+++ b/packages/grabcss/src/utilities.scss
@@ -119,8 +119,8 @@ $utility-configs: (
   'place-self': (
     variables.$place-self,
     'place-self'
-  )
-  'opacity': (
+  ),
+  'op': (
     variables.$opacities,
     'opacity'
   )
