--- a/packages/grabcss/src/variables.scss
+++ b/packages/grabcss/src/variables.scss
@@ -325,7 +325,7 @@ $opacities: ();
   $opacities: map.merge(
     $opacities,
     (
-      $name: string.unquote('var(--opacity-#{$name})')
+      $name: $value
     )
   );
 }
