--- a/packages/grabcss/src/variables.scss
+++ b/packages/grabcss/src/variables.scss
@@ -304,3 +304,28 @@ $place-self: (
   'center': center,
   'stretch': stretch
 ) !default;
+
+// Opacity
+$opacity-0: 0 !default;
+$opacity-25: 0.25 !default;
+$opacity-50: 0.5 !default;
+$opacity-75: 0.75 !default;
+$opacity-100: 1 !default;
+
+$define-opacities: (
+  '0': $opacity-0,
+  '25': $opacity-25,
+  '50': $opacity-50,
+  '75': $opacity-75,
+  '100': $opacity-100
+) !default;
+
+$opacities: ();
+@each $name, $value in $define-opacities {
+  $opacities: map.merge(
+    $opacities,
+    (
+      $name: $value
+    )
+  );
+}
