Fix: Resolve framework inconsistencies and improve documentation accuracy

--- a/packages/grabcss/src/css-vars.scss
+++ b/packages/grabcss/src/css-vars.scss
@@ -28,4 +28,8 @@
   @each $name, $value in variables.$define-border-radius {
     --border-radius-#{$name}: #{$value};
   }
+
+  @each $name, $value in variables.$define-opacities {
+    --opacity-#{$name}: #{$value};
+  }
 }
