Feat: add table and table-row display utilities

--- a/packages/grabcss/src/variables.scss
+++ b/packages/grabcss/src/variables.scss
@@ -257,6 +257,8 @@ $displays: (
   'inline-flex': inline-flex,
   'grid': grid,
   'inline-grid': inline-grid,
+  'table': table,
+  'table-row': table-row,
   'table-cell': table-cell
 ) !default;
 
