--- a/packages/grabcss/src/mediaquery.scss
+++ b/packages/grabcss/src/mediaquery.scss
@@ -4,8 +4,7 @@ $breakpoints: (
   'sm': 'screen and (min-width: 640px)',
   'md': 'screen and (min-width: 768px)',
   'lg': 'screen and (min-width: 1024px)',
-  'xl': 'screen and (min-width: 1280px)',
-  '2xl': 'screen and (min-width: 1536px)'
+  'xl': 'screen and (min-width: 1280px)'
 ) !default;
 
 @mixin mq($breakpoint: md) {
